--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3",
-    "vue-sidebar-menu": "^5.2.4"
+    "vue-sidebar-menu": "^5.2.4",
+    "vue-toast-notification": "^0.6.3",
+    "vuetify": "^2.6.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
