--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
+    "vue-awesome-paginate": "^1.0.23",
     "vue-router": "^4.1.3",
     "vue-sidebar-menu": "^5.2.4",
     "vue-toast-notification": "^0.6.3",
