--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "docxtemplater": "^3.31.3",
+    "file-saver": "^2.0.5",
+    "jszip": "^2.7.0",
+    "jszip-utils": "^0.1.0",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
     "vue-awesome-paginate": "^1.0.23",
@@ -23,6 +27,7 @@
     "vuetify": "^2.6.9"
   },
   "devDependencies": {
+    "@types/jszip": "^3.4.1",
     "@vitejs/plugin-vue": "^3.0.0",
     "vite": "^3.0.0"
   }
