Creating add carerr modal

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@types/jszip": "^3.4.1",
     "@vitejs/plugin-vue": "^3.0.0",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
     "vite": "^3.0.0"
   }
 }
