--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@syncfusion/ej2-vue-dropdowns": "^20.3.47",
     "docxtemplater": "^3.31.3",
     "file-saver": "^2.0.5",
     "jszip": "^2.7.0",
