--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "vue-router": "^4.1.3",
     "vue-sidebar-menu": "^5.2.4",
     "vue-toast-notification": "^0.6.3",
+    "vuejs-auto-complete": "^0.9.0",
+    "vuejs-autocomplete": "^0.1.1",
     "vuetify": "^2.6.9"
   },
   "devDependencies": {
