--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-awesome-paginate": "^1.0.23",
     "vue-router": "^4.1.3",
     "vue-sidebar-menu": "^5.2.4",
+    "vue-simple-accordion": "^0.1.0",
     "vue-toast-notification": "^0.6.3",
     "vuejs-auto-complete": "^0.9.0",
     "vuejs-autocomplete": "^0.1.1",
