--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@syncfusion/ej2-vue-dropdowns": "^20.3.47",
+    "axios": "^1.2.0",
     "docxtemplater": "^3.31.3",
     "file-saver": "^2.0.5",
     "jszip": "^2.7.0",
@@ -24,11 +25,8 @@
     "vue-awesome-paginate": "^1.0.23",
     "vue-router": "^4.1.3",
     "vue-sidebar-menu": "^5.2.4",
-    "vue-simple-accordion": "^0.1.0",
-    "vue-toast-notification": "^0.6.3",
     "vuejs-auto-complete": "^0.9.0",
-    "vuejs-autocomplete": "^0.1.1",
-    "vuetify": "^2.6.9"
+    "vuejs-autocomplete": "^0.1.1"
   },
   "devDependencies": {
     "@types/jszip": "^3.4.1",
